--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,7 +11,62 @@
      --------------->
     <link rel="stylesheet" href="styles/style.css">
 </head>
+
 <body>
-    
+    <!---------------- 
+        header start
+     ---------------->
+    <header>
+
+    </header>
+    <!------------- 
+        header end
+     -------------->
+    <main>
+        <!--------- top players and bolgs -------->
+        <section>
+            <!-- navigation bar and logo -->
+            <nav class="nav">
+                <img class="nav-img" src="images/icons/logo.png" alt="">
+                <h2 class="nav-title">idea</h2>
+                <ul class="nav-info">
+                    <li class="nav-item">Home</li>
+                    <li class="nav-item">About</li>
+                    <li class="nav-item">Works</li>
+                    <li class="nav-item-img"><img src="images/icons/profile.png"></li>
+                </ul>
+            </nav>
+            <div class="top-players">
+                <div class="players">
+                    <div class="player">
+                        <img src="images/players/player-1.png">
+                        <h3>Top Player-1</h3>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-2.png">
+                        <h3>Top Player-2</h3>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-3.png">
+                        <h3>Top Player-3</h3>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-4.png">
+                        <h3>Top Player-4</h3>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-5.png">
+                        <h3>Top Player-5</h3>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-6.png">
+                        <h3>Top Player-6</h3>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+
 </body>
+
 </html>
