--- a/index.html
+++ b/index.html
@@ -20,16 +20,9 @@
     <!---------------- 
         header start
      ---------------->
-    <header>
-
-    </header>
-    <!------------- 
-        header end
-     -------------->
-    <main>
-        <!--------- top players and bolgs -------->
-        <section>
-            <!-- navigation bar and logo -->
+    <!-- navigation bar and logo -->
+    <section class="nav-section">
+        <header>
             <nav class="nav">
                 <img class="nav-img" src="images/icons/logo.png" alt="">
                 <h2 class="nav-title">idea</h2>
@@ -40,34 +33,90 @@
                     <li class="nav-item-img"><img src="images/icons/profile.png"></li>
                 </ul>
             </nav>
+        </header>
+    </section>
+    <!------------- 
+        header end
+     -------------->
+    <main>
+        <!--------- top players and bolgs -------->
+        <section class="coantiner">
             <div class="top-players">
+                <h2 class="section-title">Top Players</h2>
                 <div class="players">
                     <div class="player">
                         <img src="images/players/player-1.png">
-                        <h3>Top Player-1</h3>
+                        <h3 class="player-name">Top Player-1</h3>
                     </div>
                     <div class="player">
                         <img src="images/players/player-2.png">
-                        <h3>Top Player-2</h3>
+                        <h3 class="player-name" class="player-name">Top Player-2</h3>
                     </div>
                     <div class="player">
                         <img src="images/players/player-3.png">
-                        <h3>Top Player-3</h3>
+                        <h3 class="player-name">Top Player-3</h3>
                     </div>
                     <div class="player">
                         <img src="images/players/player-4.png">
-                        <h3>Top Player-4</h3>
+                        <h3 class="player-name">Top Player-4</h3>
                     </div>
                     <div class="player">
                         <img src="images/players/player-5.png">
-                        <h3>Top Player-5</h3>
+                        <h3 class="player-name">Top Player-5</h3>
                     </div>
                     <div class="player">
                         <img src="images/players/player-6.png">
-                        <h3>Top Player-6</h3>
+                        <h3 class="player-name">Top Player-6</h3>
                     </div>
                 </div>
             </div>
+            <hr>
+            <!-------top blog--------->
+            <div class="top-blogs">
+                <h2 class="section-title">Top Blogs</h2>
+                <div class="blogs">
+                    <article class="blog">
+                            <div class="thumbnail">
+                                <img src="images/blogs/blog-1.png" alt="">
+                            </div>
+                    <div class="blog-info">
+                        <h3 class="blog-title">13 of My FavoriteUI/UX Goodies</h3>
+                        <p class="blog-author">By <a href="">Danny Sapio</a></p>               
+                    </div>
+                    </article>
+                    <article class="blog">
+                            <div class="thumbnail">
+                                <img src="images/blogs/blog-2.png" alt="">
+                            </div>
+                    <div class="blog-info">
+                        <h3 class="blog-title">13 of My FavoriteUI/UX Goodies</h3>
+                        <p class="blog-author">By <a href="">Danny Sapio</a></p>               
+                    </div>
+                    </article>
+                    <article class="blog">
+                            <div class="thumbnail">
+                                <img src="images/blogs/blog-3.png" alt="">
+                            </div>
+                    <div class="blog-info">
+                        <h3 class="blog-title">13 of My FavoriteUI/UX Goodies</h3>
+                        <p class="blog-author">By <a href="">Danny Sapio</a></p>               
+                    </div>
+                    </article>
+                    <article class="blog">
+                            <div class="thumbnail">
+                                <img src="images/blogs/blog-4.png" alt="">
+                            </div>
+                    <div class="blog-info">
+                        <h3 class="blog-title">13 of My FavoriteUI/UX Goodies</h3>
+                        <p class="blog-author">By <a href="">Danny Sapio</a></p>               
+                    </div>
+                    </article>
+                </div>
+            </div>
+        </section>
+        <!-- Lates Course -->
+        <section>
+            
         </section>
     </main>
 
