add readme file

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leader Board</title>
     <!-------------- 
-        stylessheet
+        stylesheet
      --------------->
     <link rel="stylesheet" href="styles/style.css">
     <!-- Font Style -->
@@ -41,7 +41,7 @@
         header end
      -------------->
     <main>
-        <!--------- top players and bolgs -------->
+        <!--------- top players and blogs -------->
         <section class="coantiner">
             <div class="top-players">
                 <h2 class="section-title">Top Players</h2>
